# go-stellar-xdr-json

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  go.mod  go.sum  rust-toolchain.toml
.github/workflows/: ci.yml  socket-scan.yml
lib/ffi/: Cargo.toml
lib/xdr2json/: Cargo.toml
lib/xdrjson/: Cargo.toml
scripts/generate-types/: Cargo.toml
scripts/generate-types/src/: main.rs
xdr2json/: conversion.go  conversion_test.go  types.go
xdr2json/libs/: rust-version
xdr2json/testcmd/: main.go
xdr2json/tests/cmddecode/: main.go
xdrjson/: conversion.go  conversion_test.go  conversion_unsupported.go  types.go
xdrjson/libs/: rust-version
xdrjson/testcmd/: main.go
