[package]
name = "xdrjson"
version.workspace = true
publish = false
edition = "2021"
rust-version.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
ffi = { path = "../ffi" }
libc = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

stellar-xdr = { workspace = true }
